# django-blend

./: LICENSE  setup.cfg
django_blend/: __init__.py  utilities.py
django_blend/discovery/: __init__.py  methods.py  scanning.py
