[metadata]

url = https://github.com/metanic/django-blend
license = BSD 3-Clause License

author = Bailey "monokrome" Stoner
author_email = monokrome@monokro.me
maintainer = Bailey "monokrome" Stoner
maintainer_email = monokrome@monokro.me

classifiers =

keywords =


[options]

include_package_data = True
zip_safe = true
packages = find:  

install_requires =
  zope.interface>=4.5.0
  venusian>=1.1.0


tests_require =


[options.extras_require]


[options.package_data]

* = *.md, *.html
